k8s/gateway-api-nginx/gateway-referencegrant.yaml
# ReferenceGrant nginx-gateway HTTPRoute -> monitoring-service in monitoring-ns
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: access-monitoring-ns
  namespace: monitoring-ns
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: nginx-gateway
  to:
  - group: "" 
    kind: Service
    name: monitoring-service

---

# ReferenceGrant nginx-gateway HTTPRoute -> ingestion-service in ingestion-ns
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: access-ingestion-ns
  namespace: ingestion-ns
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: nginx-gateway
  to:
  - group: "" 
    kind: Service
    name: ingestion-service

---

# ReferenceGrant nginx-gateway HTTPRoute -> dashboard-service in dashboard-ns
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: access-dashboard-ns
  namespace: dashboard-ns
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: nginx-gateway
  to:
  - group: "" 
    kind: Service
    name: dashboard-service
