k8s/gateway-api-nginx/gateway-deployment.yaml
# Taken from the nginx gateway fabric documentation
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-gateway
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: nginx-gateway
    app.kubernetes.io/name: nginx-gateway
    app.kubernetes.io/version: 2.4.0
  name: nginx-gateway
  namespace: nginx-gateway
spec:
  ports:
  - name: agent-grpc
    port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    app.kubernetes.io/instance: nginx-gateway
    app.kubernetes.io/name: nginx-gateway
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: nginx-gateway
    app.kubernetes.io/name: nginx-gateway
    app.kubernetes.io/version: 2.4.0
  name: nginx-gateway
  namespace: nginx-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: nginx-gateway
      app.kubernetes.io/name: nginx-gateway
  template:
    metadata:
      annotations:
        prometheus.io/port: "9113"
        prometheus.io/scrape: "true"
      labels:
        app.kubernetes.io/instance: nginx-gateway
        app.kubernetes.io/name: nginx-gateway
    spec:
      automountServiceAccountToken: true
      containers:
      - args:
        - controller
        - --gateway-ctlr-name=gateway.nginx.org/nginx-gateway-controller
        - --gatewayclass=nginx
        - --config=nginx-gateway-config
        - --service=nginx-gateway
        - --agent-tls-secret=agent-tls
        - --metrics-port=9113
        - --health-port=8081
        - --leader-election-lock-name=nginx-gateway-leader-election
        # NGINX Gateway Fabric will only watch the following namespaces
        - --watch-namespaces=monitoring-ns, dashboard-ns, ingestion-ns, nginx-gateway
        image: ghcr.io/nginx/nginx-gateway-fabric:2.4.0
        imagePullPolicy: IfNotPresent
        name: nginx-gateway
        ports:
        - containerPort: 8443
          name: agent-grpc
        - containerPort: 9113
          name: metrics
        - containerPort: 8081
          name: health
        readinessProbe:
          httpGet:
            path: /readyz
            port: health
          initialDelaySeconds: 3
          periodSeconds: 1
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsGroup: 1001
          runAsUser: 101
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - mountPath: /var/run/secrets/ngf
          name: nginx-agent-tls
      securityContext:
        fsGroup: 1001
        runAsNonRoot: true
      serviceAccountName: nginx-gateway
      terminationGracePeriodSeconds: 30
      volumes:
      - name: nginx-agent-tls
        secret:
          secretName: server-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  labels:
    app.kubernetes.io/instance: nginx-gateway
    app.kubernetes.io/name: nginx-gateway
    app.kubernetes.io/version: 2.4.0
  name: nginx
spec:
  controllerName: gateway.nginx.org/nginx-gateway-controller
  parametersRef:
    group: gateway.nginx.org
    kind: NginxProxy
    name: nginx-gateway-proxy-config
    namespace: nginx-gateway
