k8s/gateway-api-nginx/gateway-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-api
  namespace: nginx-gateway
spec:
  gatewayClassName: nginx
  listeners:
  - name: dashboard-listener
    port: 80
    protocol: HTTP
    allowedRoutes:
        namespaces:
          from: All
  - name: ingestion-listener
    port: 81
    protocol: HTTP
    allowedRoutes:
        namespaces:
          from: All
  - name: monitoring-dashboard-listener
    port: 82
    protocol: HTTP
    allowedRoutes:
        namespaces:
          from: All

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: monitor-frontend-route
  namespace: nginx-gateway
spec:
  parentRefs:
  - name: gateway-api
    sectionName: monitoring-dashboard-listener
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: monitoring-service
      port: 8000
      namespace: monitoring-ns

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ingestion-pipeline-route
  namespace: nginx-gateway
spec:
  parentRefs:
  - name: gateway-api
    sectionName: ingestion-listener
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: ingestion-service
      port: 81
      namespace: ingestion-ns

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dashboard-pipeline-route
  namespace: nginx-gateway
spec:
  parentRefs:
  - name: gateway-api
    sectionName: dashboard-listener
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: dashboard-service
      port: 8081
      namespace: dashboard-ns
